<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <!--<item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>-->
    <item
        android:id="@+id/sort_by_name"
        android:title="@string/sort_by_name"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/sort_name_asc"
                android:title="@string/sort_name_asc"
                app:showAsAction="never"/>
            <item
                android:id="@+id/sort_name_desc"
                android:title="@string/sort_name_desc"
                app:showAsAction="never"/>
        </menu>
    </item>

    <item
        android:id="@+id/sort_by_size"
        android:title="@string/sort_by_size"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/sort_size_asc"
                android:title="@string/sort_size_asc"
                app:showAsAction="never"/>
            <item
                android:id="@+id/sort_size_desc"
                android:title="@string/sort_size_desc"
                app:showAsAction="never"/>
        </menu>
    </item>

    <item
        android:id="@+id/sort_by_date"
        android:title="@string/sort_by_date"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/sort_date_asc"
                android:title="@string/sort_date_asc"
                app:showAsAction="never"/>
            <item
                android:id="@+id/sort_date_desc"
                android:title="@string/sort_date_desc"
                app:showAsAction="never"/>
        </menu>
    </item>

    <item
        android:id="@+id/sort_by_extension"
        android:title="@string/sort_by_extension"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/sort_ext_asc"
                android:title="@string/sort_ext_asc"
                app:showAsAction="never"/>
            <item
                android:id="@+id/sort_ext_desc"
                android:title="@string/sort_ext_desc"
                app:showAsAction="never"/>
        </menu>
    </item>

    <item
        android:id="@+id/changes"
        android:title="@string/changes"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/all_files"
                android:title="@string/all_files"
                app:showAsAction="never"/>
            <item
                android:id="@+id/changed_files"
                android:title="@string/changed_files"
                app:showAsAction="never"/>
        </menu>
    </item>

</menu>